--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=configuration-server
 server.port=8888
-spring.cloud.config.server.git.uri=htpps://github.com/uveyss/microservices-config-server
+spring.cloud.config.server.git.uri=https://github.com/uveyss/microservices-config-server
 spring.cloud.config.server.git.username=
 spring.cloud.config.server.git.password=
 spring.cloud.config.server.git.clone-on-start=true
